--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>About Me</h1>
 
-<h2>I'm a Bike Messenger, living in Austin, TX. I became interested in Front-End Web Design and Development because technology is amazing and I want to learn how to use it most effectively. </h2>
+<h2>I'm a Bike Messenger, living in Austin, TX. I became interested in Front-End Web Design and Development because <br> technology is amazing and I want to learn how to use it most effectively. </h2>
 
 <h3>My Mission</h3>
 
