first commit of design challenge for unit two

--- a/index.html
+++ b/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>About Me Page</title>
-	</head>
 
-	<body>
-		<h1>About Me</h1>
+<head>
+	<title>Design Challenge 1</title>
+</head>
 
-<h2>I'm a Bike Messenger, living in Austin, TX. I became interested in Front-End Web Design and Development because <br> technology is amazing and I want to learn how to use it most effectively. </h2>
+<body>
+	<h1>Which two websites are you most inspired by?</h1>
+		<ol>
+			<li><a target="_blank" href="http://www.mixd.co.uk">MIXD World Class Web Design</a></li>
+			<li><a target="_blank" href="http://www.thegreenwichhotel.com">The Greenwich Hotel</a></li>
+		</ol>
 
-<h3>My Mission</h3>
+	<h1>How do they exhibit effective use of space, size or balance?</h1>
+		<p>MIXD is beautifully minimal and uses negative space to give you a page layout with everything you need to learn more that isn't overwhelming.</p>
+		<p>The Greenwich Hotel is also minimal and keeps its links to one side to use the rest of the page to showcase its powerful imagery of an obviously luxurious place to stay.</p>
 
-<p>As I learn more about front-end, I hope to one day work as a front-end web developer with some dope start-up or laid back education agency because I like to work in a relaxed work <em>environment</em>.</p>
+	<h1>What makes them similar and different?</h1>
+		<p>Both sites are minimal and seek to draw you in with simple and effective imagery.</p>
+		<p>The hotel site has a bit more going on, since as a business it needs an address, phone number and numerous naviagation links.</p>
+		<p>MIXD is definitively minimal, and simply inviting you to discover what they're all about.</p>
 
-<h3>My Experience</h3>
+	<h1>Thumbnail Sketches:</h1>
+		<ul>
+			<li><p><strong>Portfolio.</strong></p>
+				  <p>
+						Portfolio sketch is balanced from top to bottom with information presented in descending order of importance. Your eyes
+						are immediately drawn to header images and can flow to content images below.
+				  </p>
+						<img src="images/design1.jpg" alt="thumbnail sketch for portfolio" />
+			</li>
 
-<p>This is how I've evolved <strong>professionally</strong>:</p>
-	<ul>
-	<li>Bike Messenger, Bushwood Investments, Austin TX, Present</li>
-	<li>Assistant Manager, Bushwood Investments, Austin, TX, 2012 - 2013</li>
-	<li>EMT-Basic, Acadian Ambulance, Austin TX, 2011</li>
-</ul>
+			<li><p><strong>Business.</strong></p>
+					<p>
+						Business sketch is simple and gets the point across right away with plenty of balanced content.
+					</p>
+						<img src="images/design2.jpg" alt="thumbnail sketch for business" /></li>
 
-<h3>Education</h3>
-<ul>
-<li>Some College</li>
-</ul>
-<h3>Other</h3>
+			<li><p><strong>Blog.</strong></p>
+					<p>
+						Blog sketch is less cluttered with contact info up top, more room for floating text content in the middle, and keeps most about information near the bottom of the page.
+					</p>
+						<img src="images/design3.jpg" alt="thumbnail sketch for your blog" /></li>
 
+			<li><p><strong>Portfolio.</strong></p>
+					<p>
+						Just seeing what I could do with omnigraffle.
+					</p>
+						<img src="images/wireframe.jpg" alt="wireframe copy of business design" /></li>
+		</ul>
 
-<p>If you're interested in collaborating with me on a project, feel free to email me at: <a href="mailto:dean451@gmail.com">dean451@gmail.com</a></p>
-	</body>
-
+</body>
 
 </html>
