mentor rec'd changes unit 3 html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="stripe"></div>
 
-		<div class="logowrapper">
+		<section class="logowrapper">
 			<img class="logoimage" src="images/logo-taasky.png" alt="Tassky logo">
 
 			<hr>
@@ -18,7 +18,7 @@
 			<p class="tagline">Beautiful, simple and easy to use task manager.</p>
 
 			<a href="https://itunes.apple.com/us/app/taasky-beautiful-task-to-do/id720309412?mt=8"><img src="images/btn_store.png" alt="download on app store button"></a>
-		</div>
+		</section>
 
 	</body>
 </html>
