unit 4 project restaurant design

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
-		<title>Taasky Homepage</title>
-		<link rel="stylesheet" href="css/stylesheet.css">
-
+		<link rel="stylesheet" type="text/css" href="css/unit4stylesheet.css">
+		<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
+		<title>Land's End Pub</title>
 	</head>
-
 	<body>
-		<div class="stripe"></div>
+		<section id="wordmark">
+					<h1><em>Land's End Pub</em></h1>
+		</section>
 
-		<div class="logowrapper">
-			<img class="logoimage" src="images/logo-taasky.png" alt="Tassky logo">
-
-			<hr>
-
-			<p class="tagline">Beautiful, simple and easy to use task manager.</p>
-
-			<a href="https://itunes.apple.com/us/app/taasky-beautiful-task-to-do/id720309412?mt=8"><img src="images/btn_store.png" alt="download on app store button"></a>
+		<div class="goblet">
+			<div id="top">D</div>
+			<div id="stem">I</div>
 		</div>
-
+		<hr align="center">
+		<section class="header">
+			<p>Purveying fine whiskey flights. Come join us.</p>
+		</section>
 	</body>
 </html>
