--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
 		<title>Land's End Pub</title>
 	</head>
 	<body>
+	<section id="content">
 		<section id="wordmark">
-					<h1><em>Land's End Pub</em></h1>
+			<h1 class="italics">Land's End Pub</h1>
 		</section>
 
 		<div class="goblet">
 			<div id="top">D</div>
 			<div id="stem">I</div>
 		</div>
-		<hr align="center">
+			<hr align="center">
 		<section class="header">
 			<p>Purveying fine whiskey flights. Come join us.</p>
 		</section>
+	</section>
 	</body>
 </html>
