updated case for css image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			  </div>
 			  
 			  <div class="col-md-4">CSS3
-			  	<img class="css_logo"src="images/css3.png" alt="HTML5">
+			  	<img class="css_logo"src="images/CSS3.png" alt="HTML5">
 			  </div>
 			  
 			  <div class="col-md-4">Responsive Design
