--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 		 <img class="macbook" src="images/macbook.jpeg" alt="macbook laptop">
 
+			<div class="clearfix"></div>
+
 			<aside>
 				<h2 class="center">Thoughts</h2>
 					<p>
